--- a/paper/main.tex
+++ b/paper/main.tex
@@ -32,7 +32,7 @@
 
 \begin{document}\sloppy\sloppypar\raggedbottom\frenchspacing % trust me
 
-\title{Population statistics of companions to APOGEE red clump stars}
+\title{Binary companions of red clump stars}
 
 \author{Adrian~M.~Price-Whelan}
 \affiliation{Department of Astrophysical Sciences,
@@ -62,7 +62,7 @@ Radial-velocity measurements can be used to find stellar, sub-stellar,
 and planetary companions of stars.
 In the \apogee\ survey, we have multi-epoch radial-velocity measurements
 for many red-giant stars, including many red-clump (\RC) stars.
-Spectral analysis of these stars can be used to deliver masses (with
+Spectral analysis of \RC\ stars can be used to deliver masses (with
 XXX precision) and 20-ish chemical abundance measurements (with YYY
 precision).
 % Aims
@@ -84,6 +84,9 @@ We put these posterior samples---made under an interim prior---into a
 hierarchical inference to obtain individual-companion-marginalized
 posterior beliefs about the properties of the full secondary-companion
 distribution in mass and period.
+In this analysis, even stars with only a few observations (and therefore
+badly multimodal posterior pdfs) contribute valuable information to the
+population inference.
 % Results
 We deliver a catalog of QQQ companions [that meet some criteria], and
 posterior samplings for all [number] stars in the parent sample.
@@ -93,17 +96,17 @@ for ZZZ and WWW.
 \end{abstract}
 
 \keywords{
-  binaries: spectroscopic
+  binaries:~spectroscopic
   ---
-  methods: data analysis
+  methods:~data~analysis
   ---
-  methods: statistical
+  methods:~statistical
   ---
-  planets and satellites: fundamental parameters
+  planets~and~satellites:~fundamental~parameters
   ---
   surveys
   ---
-  techniques: radial velocities
+  techniques:~radial~velocities
 }
 
 \section{Introduction} \label{sec:intro}
