intro: why RC stars

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -2,7 +2,9 @@
 
 % to-do list
 % ----------
-% -
+% - write a first draft of the introduction
+% - list our assumptions for detection & characterization (TheJoker)
+% - list our assumptions for hierarchical inference
 
 % style notes
 % -----------
@@ -160,12 +162,35 @@ We use all the data---even the non-detections, marginal detections, and
 badly multi-modal posterior pdfs---when we infer the population model;
 that is, we don't arbitrarily cut to a catalog of ``clean'' binaries.
 
-HOGG: Why are \RC\ or \RGB\ stars ideal candidates? It has to do with the
-unlikelihood that they will be SB2. Also: abundances! Also: masses!
-Also: distances! and so on.!
+For the study of single-line binaries, red-giant stars---and even
+better red-clump stars---are ideal.
+For one, because they are so luminous, they are unlikely (in general)
+to have equally-bright companions, and therefore are well approximated
+or fit as single-line objects.
+For two, they are standard candles, or can be distance-calibrated.
+For three, they have masses that can be estimated spectrally (making
+use of dredged-up elements; CITE MARTIG and CITE NESS).
+With primary-star mass estimates, the binary-orbit fitting will return
+$m\,\sin i$ estimates for the secondary, and not just mass-function
+estimates.
+For four, the \apogee\ pipelines, and also \thecannon\, produce
+detailed abundance estimates for red giants and \RC\ stars.
+If there are causal relationships between chemical abundances and
+binary companions---and we expect there will be---these should become
+visible here.
 
 HOGG: Why and how does \apogee\ rock it?
 
 HOGG: What is up with delivering a catalog (it requires decision-making).
+
+\section{Method: Detection and orbit fitting}
+
+\section{A catalog of red-clump binary systems}
+
+\section{Method: Population inferences}
+
+\section{The population of red-clump binary companions}
+
+\section{Discussion}
 
 \end{document}
