--- a/paper/main.tex
+++ b/paper/main.tex
@@ -19,6 +19,9 @@
 \include{gitstuff}
 \include{preamble}
 
+% adjust ASS-TEX shit
+\setlength{\parindent}{1.\baselineskip}
+
 % define macros for text
 \newcommand{\apogee}{\project{\acronym{APOGEE}}}
 \newcommand{\sdssiii}{\project{\acronym{SDSS-III}}}
@@ -59,7 +62,7 @@
 \affiliation{Max-Planck-Institut f\"ur Astronomie,
              K\"onigstuhl 17, D-69117 Heidelberg, Germany}
 
-\begin{abstract}
+\begin{abstract}\noindent % trust me
 % Context
 Radial-velocity measurements can be used to find stellar, sub-stellar,
 and planetary companions of stars.
