--- a/paper/main.tex
+++ b/paper/main.tex
@@ -22,7 +22,7 @@
 \include{preamble}
 
 % adjust AAS-TEX shit
-\setlength{\parindent}{1.\baselineskip}
+\setlength{\parindent}{1.1\baselineskip}
 
 % define macros for text
 \newcommand{\apogee}{\project{\acronym{APOGEE}}}
@@ -48,13 +48,16 @@
 \email{adrn@astro.princeton.edu}
 \correspondingauthor{Adrian M. Price-Whelan}
 
-\author{David~W.~Hogg}
+\author[0000-0003-2866-9403]{David~W.~Hogg}
+\affiliation{Max-Planck-Institut f\"ur Astronomie,
+             K\"onigstuhl 17, D-69117 Heidelberg, Germany}
 \affiliation{Center for Cosmology and Particle Physics,
              Department of Physics,
              New York University, 726 Broadway,
              New York, NY 10003, USA}
-\affiliation{Max-Planck-Institut f\"ur Astronomie,
-             K\"onigstuhl 17, D-69117 Heidelberg, Germany}
+\affiliation{Center for Data Science,
+             New York University, 60 Fifth Ave,
+             New York, NY 10011, USA}
 \affiliation{Flatiron Institute,
              Simons Foundation,
              162 Fifth Avenue,
@@ -63,6 +66,12 @@
 \author{Hans-Walter~Rix}
 \affiliation{Max-Planck-Institut f\"ur Astronomie,
              K\"onigstuhl 17, D-69117 Heidelberg, Germany}
+
+\author{Jason~Cao}
+\affiliation{Center for Cosmology and Particle Physics,
+             Department of Physics,
+             New York University, 726 Broadway,
+             New York, NY 10003, USA}
 
 \begin{abstract}\noindent % trust me
 % Context
@@ -119,8 +128,9 @@ for ZZZ and WWW.
 
 \section{Introduction} \label{sec:intro}
 
-APW: Opening sentence: If we see RV changes, there must be binaries!
-Can we infer binary populations from bad data?
+APW: Opening sentence: Even with one single star and two epochs, if we
+see an RV change, there must be binaries! What more can we say? Can we
+infer binary populations from bad data?
 
 If we want to use a spectroscopic survey to responsibly measure the
 binary-star population---that is, if we want to get (say) the mass,
