--- a/paper/main.tex
+++ b/paper/main.tex
@@ -299,7 +299,50 @@ that restrict our attention to a well-defined model space:
 \item[sufficent samplings] density and support of samplings
 \item[independent stars] no relation between one star and another; each
   drawn from the same population; no multiple populations.
-\item[population parameterization] whatevs
+\item[masses known] The mass of each primary \RC\ star is known, with
+  a correctly known posterior pdf, from prior work (CITE NESS).
+\item[population parameterization] We adopt the following
+  parameterization of the population. In what follows, $\theta$ will
+  stand in for the full set of hyper-parameters (population
+  parameters).
+  \begin{itemize}
+  \item Each primary \RC\ star has a probability $F$ (pure probability
+    $0<F<1$) of having a secondary companion. $F$ is a hyper-parameter
+    in $\theta$.
+  \item The log-period distribution $p(\ln P\given\theta)$ is a power
+    law between end-points, or
+    \begin{eqnarray}
+      \ln p(\ln P\given\theta) &=& g_0 + (g_1 - g_0)\,\frac{\ln P - x_0}{x_1 - x_0}
+      \quad \mbox{for $x_0<\ln P<x_1$,}
+    \end{eqnarray}
+    where $g_0, g_1, x_0, x_1$ are hyper-parameters in $\theta$.
+  \item Each primary star has a true mass $M$ (which we only know
+    noisily) and the companion mass is potentially larger or
+    smaller (!). The log-mass-ratio distribution $p(\ln q\given\theta)$ is
+    \begin{eqnarray}
+      \ln p(\ln q\given\theta) &=& h_0 + (h_1 - h_0)\,\frac{\ln q - y_0}{y_1 - y_0}
+      \quad \mbox{for $y_0<\ln q<y_1$,}
+    \end{eqnarray}
+    where $h_0, h_1, y_0, y_1$ are hyper-parameters in $\theta$.
+  \item The eccentricity distribution $p(e\given P,\theta)$ is a beta,
+    and permitted to vary with period:
+    \begin{eqnarray}
+      p(e\given P,\theta) &=& B(e\given \alpha(P),\beta(P))
+      \\
+      \alpha(P) &=& a_0 + (a_1 - a_0)\,\frac{P - x_0}{x_1 - x_0}
+      \\
+      \beta(P) &=& b_0 + (b_1 - b_0)\,\frac{P - x_0}{x_1 - x_0}
+      \quad ,
+    \end{eqnarray}
+    where $B(x\given\alpha,\beta)$ is the beta distribution with
+    control parameters $\alpha,\beta$, and $a_0, a_1, b_0, b_1$ are
+    hyper-parameters in $\theta$.
+  \item The inclination distribution $p(i)$ and the argument-of-perihelion
+    distribution $p(\omega)$ and the phase distribution $p(\phi)$ are all
+    fixed to their isotropic distributions. They bring no hyper-parameters
+    to $\theta$.
+  \end{itemize}
+\item[hyper-priors] whatevs
 \end{description}
 
 The binary-system parameters for each individual \RC\ star were
