--- a/paper/main.tex
+++ b/paper/main.tex
@@ -18,6 +18,10 @@
 % - Make sure that two assumptions in the two assumption lists only have the same name if they really are the same assumption: These are proper names!
 % - Hyphenate binary-star when it is an adjective, not when it is a noun!
 
+% other notes
+% - Binary engulfment reference: https://arxiv.org/pdf/1002.2216.pdf
+% -
+
 \include{gitstuff}
 \include{preamble}
 
