--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -4,7 +4,6 @@
 % ----------
 % - write a first draft of the introduction
 % - list our assumptions for detection & characterization (TheJoker)
-% - list our assumptions for hierarchical inference
 
 % style notes
 % -----------
@@ -49,7 +48,8 @@
 
 \begin{document}\sloppy\sloppypar\raggedbottom\frenchspacing % trust me
 
-\title{Binary companions of red clump stars}
+\title{Binary companions of red clump stars I: \\
+       catalog and crazy shit}
 
 \author{Adrian~M.~Price-Whelan}
 \affiliation{Department of Astrophysical Sciences,
