--- a/paper/2-population/twoface-pop.tex
+++ b/paper/2-population/twoface-pop.tex
@@ -49,7 +49,8 @@
 
 \begin{document}\sloppy\sloppypar\raggedbottom\frenchspacing % trust me
 
-\title{Binary companions of red clump stars}
+\title{Binary companions of red clump stars II: \\
+       population inference}
 
 \author{Adrian~M.~Price-Whelan}
 \affiliation{Department of Astrophysical Sciences,
