--- a/paper/2-population/twoface-pop.tex
+++ b/paper/2-population/twoface-pop.tex
@@ -8,20 +8,23 @@
 
 % style notes
 % -----------
-% - This file generates by Makefile; don't be typing ``pdflatex'' or some bullshit.
+% - This file generates by Makefile; don't be typing ``pdflatex'' or some
+%   bullshit.
 % - Line break between sentences to make the git diffs readable.
 % - Simple Monte Carlo gets a capital S to indicate that it is a defined thing.
 % - Use \, as a multiply operator.
 % - Reserve () for function arguments; use [] or {} for outer shit.
-% - Always prior pdf or posterior pdf, never prior or posterior (that's your arse).
-% - Use \sectionname not Section, \figname not Figure, \documentname not Article or Paper or paper.
-% - Make sure that two assumptions in the two assumption lists only have the same name if they really are the same assumption: These are proper names!
+% - Always prior pdf or posterior pdf, never prior or posterior (that's your
+%   arse).
+% - Use \sectionname not Section, \figname not Figure, \documentname not Article
+%   or Paper or paper.
+% - Make sure that two assumptions in the two assumption lists only have the
+%   same name if they really are the same assumption: These are proper names!
 % - Hyphenate binary-star when it is an adjective, not when it is a noun!
 % - Where there are defined math symbols (like \pars), use them!
 
 % other notes
 % - Binary engulfment reference: https://arxiv.org/pdf/1002.2216.pdf
-% -
 
 \include{gitstuff}
 \include{preamble}
@@ -52,7 +55,7 @@
 \title{Binary companions of red clump stars II: \\
        population inference}
 
-\author{Adrian~M.~Price-Whelan}
+\author[0000-0003-0872-7098]{Adrian~M.~Price-Whelan}
 \affiliation{Department of Astrophysical Sciences,
              Princeton University, Princeton, NJ 08544, USA}
 \email{adrn@astro.princeton.edu}
