--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -25,6 +25,18 @@
 % other notes
 % - Binary engulfment reference: https://arxiv.org/pdf/1002.2216.pdf
 
+% Outline:
+% - Intro
+% - Data (APOGEE description)
+% - Methods
+%     - Re-measure velocities
+%     - The Joker / orbit sampling
+% - Results
+%     - Catalog of companions (including samplings)
+%     - Differences between RGB / RC
+%     - Other interesting shit
+% - Discussion
+
 \include{gitstuff}
 \include{preamble}
 
@@ -39,6 +51,11 @@
 \newcommand{\DR}{\acronym{DR13}}
 \newcommand{\RC}{\acronym{RC}}
 \newcommand{\RGB}{\acronym{RGB}}
+
+\newcommand{\nRC}{XX}
+\newcommand{\nRGB}{XX}
+\newcommand{\ntotal}{XX}
+\newcommand{\ncompanions}{XX}
 
 % define macros for math
 \newcommand{\hyperpars}{\gamma}
@@ -87,41 +104,32 @@
 
 \begin{abstract}\noindent % trust me
 % Context
-Radial-velocity measurements can be used to find stellar, sub-stellar,
-and planetary companions of stars.
-In the \apogee\ survey, we have multi-epoch radial-velocity measurements
-for many red-giant stars, including many red-clump (\RC) stars.
-Spectral analysis of \RC\ stars can be used to deliver masses (with
-XXX precision) and 20-ish chemical abundance measurements (with YYY
-precision).
+Repeat radial-velocity measurements of stars can be used to find stellar,
+sub-stellar, and planetary companions of stars.
+The \apogee\ survey has measured multi-epoch but sparse radial velocities for
+$> XX$ (mainly red giant) stars.
+Though even few observations are useful for detecting companions, such data are
+difficult to use for constraining the physical properties of companions because
+permitted orbital solutions are highly degenerate.
 % Aims
-Here we perform a search for secondary companions of [number] \RC\ stars.
-Because the primary-star masses are known, the mass-function degeneracy
-is broken and the secondary-companion $m\,\sin i$ values can be inferred.
-Also, if the primary and companion are assumed to be co-eval, the
-abundances of the \RC\ star can be assumed to represent accurately the
-abundances of the secondary.
+Here we perform a search for secondary companions of \nRC\ red clump (\RC) and
+\nRGB\ red giant branch (\RGB) stars that have similar radii to \RC\ stars
+observed as part of the \apogee\ survey.
+Because the primary-star masses are known, the mass-function degeneracy is
+broken and the secondary-companion masses ($m\,\sin i$) can be inferred.
 % Methods
-We use a data-driven model (\thecannon) of stellar spectra to deliver
-each \RC\ mass and chemical abundances, and a custom-built Monte Carlo
-sampler (\thejoker) to deliver (often highly multi-modal) posterior
-beliefs about companion $m\,\sin i$, period, and other orbital parameters.
-Our sampler permits us to accurately sample even the badly behaved
-posterior pdfs obtained when there are as few an NNN observation
-epochs per star.
-We put these posterior samples---made under an interim prior---into a
-hierarchical inference to obtain individual-companion-marginalized
-posterior beliefs about the properties of the full secondary-companion
-distribution in mass and period.
-In this analysis, even stars with only a few observations (and therefore
-badly multimodal posterior pdfs) contribute valuable information to the
-population inference.
+We use a custom-built Monte Carlo sampler (\thejoker) combined with prior
+measurements of primary masses and stellar parameters to deliver (often highly
+multi-modal) posterior beliefs about companion mass, pericenter distance, and
+other orbital parameters for the \RC\ and \RGB\ stars.
 % Results
-We deliver a catalog of QQQ companions [that meet some criteria], and
-posterior samplings for all [number] stars in the parent sample.
-We find that the period and mass distributions [have some properties].
-We look for trends with chemical abundances, and we find tentative evidence
-for ZZZ and WWW.
+We deliver a catalog of \ncompanions\ companions \todo{that meet some criteria},
+and posterior samplings for all \ntotal\ stars in the parent sample.
+We find \todo{describe} differences between the companions around \RC\ and \RGB\
+stars that are \todo{in/consistent} with the theoretical prediction that
+stellar companions should not survive the common-envelope \RGB\ phase.
+We additionally find trends with chemical abundances, and we find tentative
+evidence for ZZZ and WWW.
 \end{abstract}
 
 \keywords{
